force-app/main/default/objects/Ascent_Login_Destination__c/Ascent_Login_Destination__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Ascent Login Destination</label>
</CustomObject>