force-app/main/default/objects/Ascent_Login_Destination__c/fields/Is_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Is_Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sandbox</label>
    <type>Checkbox</type>
</CustomField>