force-app/main/default/objects/Ascent_Login_Destination__c/fields/Mobile_Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Landing_Page__c</fullName>
    <label>Mobile Landing Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>