force-app/main/default/objects/Ascent_Login_Destination__c/fields/Mobile_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Site_URL__c</fullName>
    <label>Mobile Site URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>