force-app/main/default/objects/Ascent_Login_Destination__c/fields/URL_Header_Search__c.field-meta.xml
<CustomField>
    <fullName>URL_Header_Search__c</fullName>
    <label>URL Header Search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>